# dynamorio_trace_reader

./: CMakeLists.txt  README.md  main.c
cmake/: DynamoRIO.cmake
